add pretty form validation to new user registration form

--- a/app/components/form_components/password_field/component.html.erb
+++ b/app/components/form_components/password_field/component.html.erb
@@ -1,6 +1,11 @@
 <div>
   <%= @form.label @input_name, @label_text, class: "input-label" %>
   <div class="mt-2">
-    <%= @form.password_field @input_name, class: "input-text" %>
+    <%= @form.password_field @input_name, class: "input-text #{@errors.any? && 'ring-red-500'}" %>
   </div>
+  <% if @errors.any? %>
+    <p class="mt-1 text-sm text-red-600">
+      <%= @errors.first %>
+    </p>
+  <% end %>
 </div>
