--- a/app/components/form_components/text_field/component.html.erb
+++ b/app/components/form_components/text_field/component.html.erb
@@ -4,6 +4,11 @@
     <%= @form.text_field @input_name,
                          data: @input_data_attrs,
                          disabled: @disabled,
-                         class: "input-text #{@disabled && 'input-text-disabled'}" %>
+                         class: "input-text #{@disabled && 'input-text-disabled'} #{@errors.any? && 'ring-red-500'}" %>
   </div>
+  <% if @errors.any? %>
+    <p class="mt-1 text-sm text-red-600">
+      <%= @errors.first %>
+    </p>
+  <% end %>
 </div>
