--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <body class="min-h-screen bg-slate-50">
 <%= render "shared/navbar" %>
 <main>
-  <%= render "shared/toast" %>
+  <%= render Toast::Component.new %>
 
   <div class="container mx-auto max-w-screen-xl px-8 md:px-0 md:max-w-3xl">
     <%= yield %>
