--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -6,6 +6,6 @@
 </div>
 <div class="mt-10 flex flex-col gap-4">
   <% @users.each do |user| %>
-    <%= render "result_card", user: user %>
+    <%= render ResultCard::Component.new(user: user) %>
   <% end %>
 </div>
