adjust tailwind css imports acording to recommendation from tailwind docs

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,10 +1,9 @@
-/* PokerNight CSS/Tailwind Components */
-/* NOTE: all imports must come before any lines containing @tailwind */
-@import "components/form.css";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+/* PokerNight CSS/Tailwind Components */
+@import "components/form.css";
 
 @layer components {
     .input-text {
