--- a/app/components/navbar/component.html.erb
+++ b/app/components/navbar/component.html.erb
@@ -9,7 +9,10 @@
       </div>
     <% end %>
     <div class="relative transition-opacity">
-      <button class="btn p-2" data-navbar-target="userMenuBtn" data-action="click->navbar#toggle">
+      <button class="btn p-2 flex gap-2" data-navbar-target="userMenuBtn" data-action="click->navbar#toggle">
+        <% if user_signed_in? %>
+          <p class="hidden text-white font-outfit font-normal md:block"><%= "#{current_user.first_name} #{current_user.last_name}" %></p>
+        <% end %>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-white">
           <path stroke-linecap="round" stroke-linejoin="round" d="M17.982 18.725A7.488 7.488 0 0012 15.75a7.488 7.488 0 00-5.982 2.975m11.963 0a9 9 0 10-11.963 0m11.963 0A8.966 8.966 0 0112 21a8.966 8.966 0 01-5.982-2.275M15 9.75a3 3 0 11-6 0 3 3 0 016 0z"/>
         </svg>
