--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -7,17 +7,21 @@
       <%= render FormComponents::EmailField::Component.new(
         form: f,
         input_name: :email,
+        autofocus: true,
+        autocomplete: "email",
         errors: @user.errors.full_messages_for(:email),
       ) %>
       <div class="flex flex-col space-y-6 md:space-y-0 md:flex-row md:gap-4">
         <%= render FormComponents::TextField::Component.new(
           form: f,
           input_name: :first_name,
+          autocomplete: "given-name",
           errors: @user.errors.full_messages_for(:first_name),
         ) %>
         <%= render FormComponents::TextField::Component.new(
           form: f,
           input_name: :last_name,
+          autocomplete: "family-name",
           errors: @user.errors.full_messages_for(:last_name),
         ) %>
       </div>
@@ -25,7 +29,7 @@
                    class: "btn btn-primary h-12 w-full items-center" %>
     <% end %>
   </div>
-  <hr class="border rounded-full border-slate-600/25"/>
+  <hr class="border rounded-full border-slate-700/10"/>
   <div class="flex flex-col gap-5">
     <%= link_to "Change Password", edit_passwords_path, class: "btn btn-primary h-12 w-full items-center", data: { turbo_frame: "modal" } %>
     <%= link_to "Delete my account", registration_path(resource_name), class: "btn btn-danger h-12 w-full items-center", data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %>
