update toast component to use better pattern

--- a/app/components/toast/component.html.erb
+++ b/app/components/toast/component.html.erb
@@ -1,34 +1,32 @@
-<% if flash.any? %>
-  <div
-    data-controller="toast"
-    data-toast-target="toast"
-    class="fixed w-full flex items-center justify-center bottom-5 transition-all"
-    data-transition-enter-active="transition ease-in-out duration-300"
-    data-transition-enter-from="transform translate-y-full"
-    data-transition-enter-to="transform translate-y-0"
-    data-transition-leave-active="transition ease-in-out duration-200"
-    data-transition-leave-from="transform translate-y-0"
-    data-transition-leave-to="transform translate-y-full"
-  >
-    <div class="flex items-center justify-between w-full max-w-xs px-4 py-2 text-gray-700 bg-white rounded-lg shadow-xl border border-gray-200 border-solid" role="alert">
-      <div class="flex items-center gap-2">
-        <% if flash[:notice] %>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-emerald-500">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
-          </svg>
-        <% else %>
-          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6 stroke-red-500">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M12 9v3.75m9-.75a9 9 0 11-18 0 9 9 0 0118 0zm-9 3.75h.008v.008H12v-.008z"/>
-          </svg>
-        <% end %>
-        <div class="text-sm font-normal"><%= flash[:notice] || flash[:alert] %></div>
-      </div>
-      <button type="button" class="group p-2 rounded-md" aria-label="Close" data-action="click->toast#hideToast">
-        <span class="sr-only">Close</span>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 stroke-gray-400 group-hover:stroke-gray-600">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+<div
+  data-controller="toast"
+  data-toast-target="toast"
+  class="pointer-events-auto w-full max-w-sm overflow-hidden rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5"
+  data-transition-enter-active="transform ease-out duration-300 transition"
+  data-transition-enter-from="translate-y-2 opacity-0"
+  data-transition-enter-to="translate-y-0 opacity-100"
+  data-transition-leave-active="transition ease-in duration-100"
+  data-transition-leave-from="opacity-100"
+  data-transition-leave-to="opacity-0"
+>
+  <div class="p-4">
+    <div class="flex items-start">
+      <div class="flex-shrink-0">
+        <svg class="h-6 w-6 text-green-400" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
-      </button>
+      </div>
+      <div class="ml-3 w-0 flex-1 pt-0.5">
+        <p class="text-sm font-medium text-slate-900"><%= content %></p>
+      </div>
+      <div class="ml-4 flex flex-shrink-0">
+        <button type="button" class="inline-flex rounded-md bg-white text-slate-400 hover:text-slate-500 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2" data-action="click->toast#hideToast">
+          <span class="sr-only">Close</span>
+          <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+            <path d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z"/>
+          </svg>
+        </button>
+      </div>
     </div>
   </div>
-<% end %>
+</div>
