use el-transition for element transitions

--- a/app/components/toast/component.html.erb
+++ b/app/components/toast/component.html.erb
@@ -2,12 +2,12 @@
   data-controller="toast"
   data-toast-target="toast"
   class="pointer-events-auto w-full max-w-sm overflow-hidden rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5"
-  data-transition-enter-active="transform ease-out duration-300 transition"
-  data-transition-enter-from="translate-y-2 opacity-0"
-  data-transition-enter-to="translate-y-0 opacity-100"
-  data-transition-leave-active="transition ease-in duration-100"
-  data-transition-leave-from="opacity-100"
-  data-transition-leave-to="opacity-0"
+  data-transition-enter="transform ease-out duration-300 transition"
+  data-transition-enter-start="translate-y-2 opacity-0"
+  data-transition-enter-end="translate-y-0 opacity-100"
+  data-transition-leave="transition ease-in duration-100"
+  data-transition-leave-start="opacity-100"
+  data-transition-leave-end="opacity-0"
 >
   <div class="p-4">
     <div class="flex items-start">
