--- a/app/components/notification/component.html.erb
+++ b/app/components/notification/component.html.erb
@@ -1,6 +1,6 @@
 <div
-  data-controller="toast"
-  data-toast-target="toast"
+  data-controller="notification"
+  data-notification-target="notification"
   class="pointer-events-auto w-full max-w-sm overflow-hidden rounded-lg bg-white shadow-lg ring-1 ring-black ring-opacity-5"
   data-transition-enter="transform ease-out duration-300 transition"
   data-transition-enter-start="translate-y-2 opacity-0"
@@ -20,7 +20,11 @@
         <p class="text-sm font-medium text-slate-900"><%= content %></p>
       </div>
       <div class="ml-4 flex flex-shrink-0">
-        <button type="button" class="inline-flex rounded-md bg-white text-slate-400 hover:text-slate-500 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2" data-action="click->toast#hideToast">
+        <button
+          type="button"
+          class="inline-flex rounded-md bg-white text-slate-400 hover:text-slate-500 focus:outline-none focus:ring-2 focus:ring-emerald-500 focus:ring-offset-2"
+          data-action="click->notification#hideToast"
+        >
           <span class="sr-only">Close</span>
           <svg class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
             <path d="M6.28 5.22a.75.75 0 00-1.06 1.06L8.94 10l-3.72 3.72a.75.75 0 101.06 1.06L10 11.06l3.72 3.72a.75.75 0 101.06-1.06L11.06 10l3.72-3.72a.75.75 0 00-1.06-1.06L10 8.94 6.28 5.22z"/>
