--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,19 +3,14 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: 240, 10%, 4%;
+  --foreground: 240, 5%, 96%;
+  --primary: 45, 93%, 47%;
+  --primary-foreground: 240, 5%, 96%;
 }
 
 body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  color: hsl(var(--foreground));
+  background: hsl(var(--background));
+  font-family: "Geist", Arial, Helvetica, sans-serif;
 }
