--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,6 +7,7 @@
 @theme {
     --font-sans: Poppins, ui-sans-serif, system-ui, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    --color-primary: #B91C1C;
 }
 
 /*
